[package]
name = "get"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
futures = "0.3"
futures-util = "0.3.14"
reqwest = "0.9.2"
indicatif = "0.9.0"
failure = "0.1.2"
exitfailure = "0.5.1"
tempfile = "3.3.0"
regex = "1.6.0"
zip = "0.6.2"